catkin_ws/logs/backend/build.make.924.log.stderr
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:375:4: warning: multi-line comment [-Wcomment]
    // cv::drawMatches(frame1.getGray(),frame1.getKeypoints(),frame2.getGray(),frame2.getKeypoints(), matches, \
    ^
In file included from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:16:0:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp: In member function ‘void SLAM::Mapping::matchTwoFrames(const SLAM::Frame&, const SLAM::Frame&, bool&, bool&, Eigen::Isometry3d&, Eigen::Matrix<double, 6, 6>&)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Mapping.h:26:20: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
 #define DEBUG_NEW -10
                    ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:372:24: note: in expansion of macro ‘DEBUG_NEW’
   if(( nodes.size() == DEBUG_NEW)&& (frame2.getId() == DEBUG_OLD)){ // sequential node
                        ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Mapping.h:26:20: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
 #define DEBUG_NEW -10
                    ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:390:26: note: in expansion of macro ‘DEBUG_NEW’
    else if (nodes.size()>DEBUG_NEW)
                          ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:412:36: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
   for (int i = 0; i<consensus.size();i++)
                                    ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:413:23: error: no match for call to ‘(std::vector<int>) (int&)’
    cout << consensus(i) << " is the consensus" << endl;
                       ^
make[2]: *** [CMakeFiles/frontend.dir/src/Mapping.cpp.o] Error 1
make[1]: *** [CMakeFiles/frontend.dir/all] Error 2
make: *** [all] Error 2
